--- a/app/globals.css
+++ b/app/globals.css
@@ -158,3 +158,11 @@
 .text-shadow {
   position: relative;
 }
+
+.text-stroke {
+  -webkit-text-stroke: 0.5px black;
+}
+
+.new-shadow {
+  text-shadow: 2px 2px 1px rgba(128, 0, 0, 0.25);
+}
